Created homepage, tweaked pages
Added the homepage (index.htm). Not totally sure what it should look
like, it isn't finished.
Made the holder_small.jpg image 64x64 pixels to fit better in lists.
Added additional formatting to quotelect.css - added class .brand-head
to be used for consistent formatting of the Quotelect brand name (at
least until a logo is established).
Various other minor changes.

--- a/qcss/quotelect.css
+++ b/qcss/quotelect.css
@@ -1,1 +1,11 @@
+/* Quotelect Custom CSS */
+
+/* Align thumbnail in center, couldn't get bootstrap to do it */
 div.thumbnail {text-align:center;} 
+
+/* Decrease wasted space when using a pager in a well */
+ul.pager-in-well {margin:0cm 0cm 0cm 0cm;}
+
+/* Default font settings for Quotelect brand name */
+/* Will likely be temporary until a logo is designed */
+.brand-head {color:#1F7A1F; font-weight:600; font-size:110%;}
