Adding in a datepicker and a timepicker; adding containers around stuff
The datepicker and timepicker are both a little weird; they need more
work for sure. The timepicker especially. But it's something.

--- a/qcss/quotelect.css
+++ b/qcss/quotelect.css
@@ -9,3 +9,8 @@ ul.pager-in-well {margin:0cm 0cm 0cm 0cm;}
 /* Default font settings for Quotelect brand name */
 /* Will likely be temporary until a logo is designed */
 .brand-head {color:#1F7A1F; font-weight:600; font-size:110%;}
+
+/* Shrinking search box so it doesn't jack things up at small sizes */
+@media (max-width: 480px) {
+.search-query {width:75px;}
+}
